# KafkaConsumerProducerTool

./: .README.md.swp  .gitignore  KafkaConsumerProducerTool.cabal  LICENSE  README.md  build.sh  cabal.config  docker-compose.yaml  drawDeps.sh  stack.yaml
.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/doc/: doc-index.html  index.html
.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/doc/KafkaConsumerProducerTool-0.1.0.0/: Data-Kafka-ExampleKafkaConsumer.html  Data-Kafka-ExampleKafkaProducerArticleTopic.html  Data-Kafka-ExampleKafkaProducerAsnTopic.html  Data-Kafka-ExampleKafkaProducerOrderTopic.html  Data-Kafka-ExampleKafkaProducerProductRecallTopic.html  Data-Kafka-ExampleKafkaProducerStockTopic.html  Data-Kafka-ExampleKafkaProducerTourDataTopic.html  KafkaConsumerProducerTool.haddock  doc-index.html  index.html  mini_Data-Kafka-ExampleKafkaConsumer.html  mini_Data-Kafka-ExampleKafkaProducerArticleTopic.html  mini_Data-Kafka-ExampleKafkaProducerAsnTopic.html  mini_Data-Kafka-ExampleKafkaProducerOrderTopic.html  (+3 more)
.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  KafkaConsumerProducerTool-0.1.0.0-4hl0uxqbwb1Fd8qBEe22LI  KafkaConsumerProducerTool-0.1.0.0-6QZAe94pYTrGUiwSdiD3yj  KafkaConsumerProducerTool-0.1.0.0-Ik3trXRblCjLEFvkKv8NnL  ListLike-4.5.1-JT9vOPxa6nQ3C7AGlE7SFG  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  aeson-pretty-0.8.5-4ArTR5pkpZX48zloKnfDNn  alex-3.2.3  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  appar-0.1.4-DGWHHt2WRn9FI49prcwO9  asn1-encoding-0.9.5-CmDkwNPA51zjuzFcENFZ5  asn1-parse-0.9.4-HSgo3I4Jg5sAQWRFdyScvb  asn1-types-0.3.2-Ls8owv2hbTfEqG1LKzBcjy  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  auto-update-0.1.4-EmUvNdmhEju51bHrtaEMpz  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  basement-0.0.2-HQuQCDQkzPb1RQsskWNdsw  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  byteorder-1.0.4-9NlNHkBVdo7F1prFVKrkcH  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  c2hs-0.28.2  cabal-doctest-1.0.2-7qDWi4QMBieCUnNAxkUwxe  cairo-0.13.3.1-2iMsd3vjHE0IbfkqWSIpmo  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  case-insensitive-1.2.0.10-1D5OUKQ7UrJ7IpOe0di4Un  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.18-1MOxB7BXiUZGCBZB9Kx8qK  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  conduit-1.2.12-Lvx0NKWTZH4BnyzXR667l8  conduit-extra-1.1.17-L1cK7V6tC2ELZV4EI9yJFs  connection-0.2.8-7E5s9ndt8OF7NNDH3ifO8K  contravariant-1.4-29zF0Im431177ovfbHYCGv  cookie-0.4.2.1-ImqC1hbvUERAwQQgqhuUAD  (+109 more)
.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/pkgdb/: hw-kafka-client-2.0.1-1a6yT0aaJWEDoGh8lBI9IG.conf  package.cache
app/: Main.hs
src/Data/Kafka/: KafkaConsumer.hs  KafkaProducer.hs
src/UI/: Consumer.hs  Producer.hs  Utils.hs
(+1595 files in other folders)
