name:                KafkaConsumerProducerTool
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bemcho/KafkaConsumerProducerTool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          bemcho@gmail.com
copyright:           2017 Emil Tomov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     Data.Kafka.KafkaConsumer, Data.Kafka.KafkaProducer, UI.Utils, UI.Producer, UI.Consumer
  build-depends:       base >= 4.13 && < 5,
                       gtk3,
                       hw-kafka-client,
                       bytestring ,
                       time,
                       utf8-string,
                       containers,
                       strings,
                       uuid,
                       text-conversions,
                       text

  default-language:    Haskell2010

executable KafkaConsumerProducerTool
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
                      -fwarn-tabs
                      -fwarn-unused-imports
                      -fwarn-missing-signatures
                      -fwarn-name-shadowing
                      -fwarn-incomplete-patterns
                      -fwarn-incomplete-uni-patterns
                      -fdiagnostics-color=always

  build-depends:       base,
                       gtk3,
                       hw-kafka-client,
                       bytestring ,
                       time,
                       utf8-string,
                       containers,
                       strings,
                       uuid,
                       text-conversions,
                       text,
                       KafkaConsumerProducerTool

  default-language:    Haskell2010

test-suite KafkaConsumerProducerTool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , KafkaConsumerProducerTool
                     , hspec
                     , QuickCheck

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-tabs
                       -fwarn-unused-imports
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -fdiagnostics-color=always

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bemcho/KafkaConsumerProducerTool
